Clean up initial clone