@@ -1,1 +1,2 @@
-Clean up initial clone
+	* Support build on Solaris
+	* Clean up initial clone
